# AdventOfCode

./: .gitignore
.github/: copilot-instructions.md
aoc2024-rust/: Cargo.toml
aoc2024-rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  fileutil.rs  main.rs
aoc2024_fsharp/: AocUtil.fs  Day01.fs  Day02.fs  Day03.fs  Day04.fs  Program.fs  aoc2024_fsharp.fsproj  aoc2024_fsharp.sln
aoc2024_fsharp/.github/: copilot-instructions.md
aoc2024_ocaml/: dune-project
aoc2024_ocaml/lib/: day01.ml  day02.ml  day03.ml  dune  util.ml
aoc2024_ocaml/test/: dune
aoc2025-cpp/: CMakeLists.txt  run.sh
aoc2025-cpp/src/: day01.cpp  day01.hpp  day02.cpp  day02.hpp  day03.cpp  day03.hpp  day04.cpp  day04.hpp  day05.cpp  day05.hpp  day06.cpp  day06.hpp  day07.cpp  day07.hpp  day08.cpp  day08.hpp  main.cpp  utils.cpp  utils.hpp
